trunk/Archive2/30/7f5bfa29ab8d45/main.cpp
template< typename > struct X
{
  void foo() {}

  auto bar() -> decltype( X::foo() )
  {
    return foo();
  }
};

int main()
{
  X<int>().bar();
}
